@@ -25,6 +25,9 @@ Additional API Changes:
   * [MESOS-4735] - Add 'filename' field to CommandInfo.URI in Scheduler API
     and v1 Scheduler HTTP API.
 
+Deprecations:
+  * [MESOS-4910] - Deprecate the --docker_stop_timeout agent flag.
+
 
 Release Notes - Mesos - Version 0.28.0
 --------------------------------------------
